# CepFoliumMap

./: .env.exemplo  .gitignore  LICENSE.md  README.md  app.py  data_merger.py  main.py  pyproject.toml  scrappy.py
cepfoliummap/: config.py  constants.py  consts.py  frames.py  geocode.py  merge.py  scrappy.py
