[tool.poetry]
name = "cepfoliummap"
version = "0.1.0"
description = ""
authors = ["viniciusccosta <viniciusccosta95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
folium = "^0.14.0"
pandas = "^2.1.0"
xlrd = "^2.0.1"
httpx = "^0.25.0"
aiometer = "^0.4.0"
beautifulsoup4 = "^4.12.2"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
